[project]
name = "llm-observability-with-langfuse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "langfuse==2.57.1",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rouge-score>=0.1.2",
    "sentence-transformers>=5.6.0",
]
